Use new toList method directly on stream